resolved conflicts